@@ -511,7 +511,7 @@ XS/EvtHandler.xs
 XS/FileCtrl.xsp
 XS/FileDialog.xs
 XS/FilePickerCtrl.xsp
-XS/FindReplaceDialog.xs
+XS/FindReplaceDialog.xsp
 XS/Font.xs
 XS/FontDialog.xs
 XS/FontEnumerator.xsp
